<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>first-package</name>
  <version>0.0.0</version>
  <description>First Try</description>
  <maintainer email="kali@todo.todo">kali</maintainer>
  <license>Developed By Kevs</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>demo_nodes_py</exec_depend>
  <exec_depend>demo_nodes_cpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
